--- a/index.html
+++ b/index.html
@@ -1,55 +1,35 @@
-
 <!DOCTYPE html>
-<html>
-<head>
+<html lang="en-us">
+  <head>
+    <meta charset="UTF-8">
+    <title>Marker Clusters</title>
 
+    <!-- Leaflet JS & CSS -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css"
+    integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
+    crossorigin=""/>
+    <script src="https://unpkg.com/leaflet@1.3.3/dist/leaflet.js"
+    integrity="sha512-tAGcCfR4Sc5ZP5ZoVz0quoZDYX5aCtEm/eu1KhSLj2c9eFrylXZknQYmxUssFaVJKvvc0dJQixhGjG2yXWiV9Q=="
+    crossorigin=""></script>
 
-</head>
-<title>Sean's Yahoo Ripoff
-</title>
-    <body>
-    <h1>NBA Playoff's</h1>
+    <!-- d3 JS -->
+    <script src="https://d3js.org/d3.v4.min.js"></script>
 
-    <h2>Damian Lillard Insane shot</h2>
-    <img src="https://www.nbcsports.com/northwest/sites/csnnw/files/styles/article_hero_image/public/2019/04/24/2755dc26bd7e_1920x1080.jpg?itok=uC7szpYZ" height="200" width="275">
-    <br>
-    <a href="http://www.espn.com/nba/player/stats/_/id/6606/damian-lillard"> Link to Damain Lillard stats</a>
-    <br>
-    <center>
-    <table border="1">
+    <!-- Marker Cluster JS & CSS -->
+    <script type="text/javascript" src="https://unpkg.com/leaflet.markercluster@1.0.3/dist/leaflet.markercluster.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://unpkg.com/leaflet.markercluster@1.0.3/dist/MarkerCluster.css">
+    <link rel="stylesheet" type="text/css" href="https://unpkg.com/leaflet.markercluster@1.0.3/dist/MarkerCluster.Default.css">
 
-        <tr>
-            <td>row 1, column 1</td>
-            <td>row 1, column 2</td>
-        </tr>
-        <tr>
-            <td>row 2, column 1</td>
-            <td>row 2, column 2</td>
-        </tr>
-    </table>
+    <!-- Our CSS -->
+    <link rel="stylesheet" type="text/css" href="static/css/style.css">
 
-    <iframe width="420" height="315" src="https://www.youtube.com/embed/a-M3x-eZpV8">
-</iframe>
-    </center>
+  </head>
+  <body>
 
-    <br>
-    <ul>
-        <li><i>The shot was amazing</i></li>
-        <li>Russell Westbrook should retire</li>
+    <div id="map"></div>
+    <script type="text/javascript" src="static/js/config.js"></script>
+    <!-- <script type="text/javascript" src="static/js/logic.js"></script> -->
+    <script type="text/javascript" src="static/js/logic2.js"></script>
 
-    </ul>
-
-    <br>
-    <ol>
-        <li><strong>First was the shot</strong></li>
-        <li>Then the celebration for Blazers</li>
-        <li>Then misery for Thunder</li>
-
-    </ol>
-
-    </body>
-
-    
+  </body>
 </html>
-
-
